# DTLNPytorch

./: .gitignore  README.md  dataloader.py  requirements.txt  train.py  train_finetune.py
configs/: eval_dns.toml  train.toml  train_aec.toml  train_dns.toml  train_finetune.toml  train_npu.toml
deploy_32k/: CMakeLists.txt
deploy_32k/src/: DTLN_NS_ncnn.cpp  DTLN_NS_ncnn.h  fea_utils.cpp  fea_utils.h  file_utils.cpp  main_DTLN_NS.cpp  pcm_utils.h
model/DTLN_0531_si-snr_lr=0.002/: 2023-06-01 14:28:35.toml
model/DTLN_0531_si-snr_lr=0.002/logs/: train_log.txt
model/DTLN_0602_finetune_lr0.00005_onlynewdata/: 2023-06-02 17:56:39.toml
model/DTLN_0602_finetune_lr0.00005_onlynewdata/logs/: train_log.txt
model/DTLN_0603_npu_nonorm/: 2023-06-03 14:03:27.toml
model/DTLN_0603_npu_nonorm/logs/: train_log.txt
modules/: dtlnModel_ns.py  dtlnModel_ns_export.py  dtlnModel_ns_export_rk.py  dtlnModel_rk_npu_nonorm.py  dtlnModel_rk_test.py  dtlnModel_rk_test_p2.py  dtlnModel_stage.py
tools/: calculateTools.py  calculate_runtime.py  evaler.py  for_quantization.py  initial_model.py  realtimeInfer.py  realtimeInfer_32k.py  realtimeInfer_32k_dir.py  realtimeInfer_aec.py  trainer.py
